--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mike给大家的信</title>
+  <title>离别相册</title>
 
   <!-- 密码保护 -->
   <script>
@@ -53,8 +53,12 @@
       line-height: 1.6em;
     }
 
+    /* 回忆按钮固定在封面底部 */
     #start-btn {
-      margin-top: 20px;
+      position: absolute;
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
       padding: 10px 20px;
       font-size: 1em;
       border: none;
@@ -62,6 +66,7 @@
       background-color: #a35c7a;
       color: #fff;
       cursor: pointer;
+      z-index: 20;
     }
 
     #start-btn:hover {
@@ -145,7 +150,7 @@
       <p>因为在主那里的辛劳永远不会白费，我们也会在不久的将来再次相遇，并永远在乐园里欢聚。</p>
       <p>现在请接受我最真诚的祝福，我也会不断为你祷告。感激你为我做的一切，也希望在不久的将来为你成就感到由衷的自豪。</p>
       <p style="text-align:right; margin-top:24px;">你的弟兄，朋友以及家人。<br>Mike 蒋小霖</p>
-      <button id="start-btn">打开音乐相册</button>
+      <button id="start-btn">回忆</button>
     </div>
     <img id="cover-photo" src="cover.jpg" alt="封面照片">
   </div>
