--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>离别相册</title>
+  <title>Mike给大家的信</title>
 
   <!-- 密码保护 -->
   <script>
