--- a/index.html
+++ b/index.html
@@ -38,13 +38,6 @@
       border: 6px solid #e5d1b8;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
       z-index: 10;
-      transition: transform 1s ease, opacity 1s ease;
-      transform-origin: left center;
-    }
-
-    #cover.hide {
-      transform: rotateY(90deg) translateX(100%);
-      opacity: 0;
     }
 
     #cover-photo-container {
@@ -93,19 +86,13 @@
       text-align: center;
     }
 
-    #album-img {
+    #album img {
       width: 90%;
       max-width: 800px;
       max-height: 80vh;
       object-fit: contain;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      opacity: 0;
-      transition: opacity 1s ease;
-    }
-
-    #album-img.show {
-      opacity: 1;
     }
 
     .nav-btn {
@@ -239,16 +226,22 @@
       }
     });
 
-    // 相册数据
+    // 点击按钮，隐藏封面显示相册并播放音乐
+    startBtn.addEventListener('click', () => {
+      cover.style.display = 'none';
+      album.style.display = 'block';
+      if (bgm.paused) {
+        bgm.play();
+        btn.classList.add('playing');
+      }
+    });
+
+    // 相册切换
     let currentIndex = 1;
     const totalPhotos = 59;
 
     function showPhoto(index) {
-      albumImg.classList.remove('show');
-      setTimeout(() => {
-        albumImg.src = index + ".jpg";
-        albumImg.classList.add('show');
-      }, 200); // 200ms延迟实现淡入效果
+      albumImg.src = index + ".jpg";
     }
 
     prevBtn.addEventListener('click', () => {
@@ -261,30 +254,6 @@
       currentIndex++;
       if (currentIndex > totalPhotos) currentIndex = 1;
       showPhoto(currentIndex);
-    });
-
-    // 自动翻页
-    let autoFlipInterval;
-    function startAutoFlip() {
-      autoFlipInterval = setInterval(() => {
-        currentIndex++;
-        if (currentIndex > totalPhotos) currentIndex = 1;
-        showPhoto(currentIndex);
-      }, 15000); // 15秒
-    }
-
-    // 点击按钮，封面翻开显示相册
-    startBtn.addEventListener('click', () => {
-      cover.classList.add('hide');
-      setTimeout(() => {
-        cover.style.display = 'none';
-        album.style.display = 'block';
-        if (bgm.paused) {
-          bgm.play();
-          btn.classList.add('playing');
-        }
-        startAutoFlip();
-      }, 1000); // 动画1秒
     });
   </script>
 </body>
