--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
 
 我在这里感谢耶和华上帝给我这个机会和殊荣与你一起侍奉他。
 虽然相处的时光短暂，但是无论是欢笑还是泪水，都让我倍加珍惜。
-这是一封给你的感谢信，感谢你对我付出的基督徒爱心，我因为你的爱心和信心都学到很多。
-的确离别让人难过。
+这是一封给你的感谢信，感谢你对我付出的基督徒爱心，我从你身上美好的基督徒特质中学到很多。
+的确离别让人难过，我也讨厌说再见。
 但我们因侍奉耶和华而有机会相遇，不可能说谎的上帝也赐给我们美好的希望，
 让我们在不久的将来永远享受生命。
 
 不如我们现在满怀希望展望未来，在各自的服务岗位上满腔热诚得为耶和华竭力效劳。
-因为在主那里的辛劳永远不会白费，我们也会在不久的将来再次相遇，并永远在乐园里欢聚。
+因为在主那里的辛劳永远不会白费，我们也会在不久的将来再次相遇，并永远在乐园里得到奖赏，欢聚一堂。
 
 现在请接受我最真诚的祝福，我也会不断为你祷告。
-感激你为我做的一切，也希望在不久的将来为你成就感到由衷的自豪。
+感激你为我做的一切，也希望在不久的将来为你的成就而感到由衷的自豪。
 
 你的弟兄、朋友以及家人。  
 Mike 蒋小霖
