--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Mike 蒋小霖
   <!-- 相册部分 -->
   <div id="album">
     <img id="photo" src="1.jpg" alt="相册照片">
-    <audio id="bgm" src="music.mp3" loop></audio>
+    <audio id="bgm" src="365.mp3" loop></audio>
   </div>
 
   <script>
