--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 因为在主那里的辛劳永远不会白费，我们也会在不久的将来再次相遇，并永远在乐园里得到奖赏，欢聚一堂。
 
 现在请接受我最真诚的祝福，我也会不断为你祷告。
-感激你为我做的一切，也希望在不久的将来为你的成就而感到由衷地自豪。
+感激你为我做的一切，也希望在不久的将来为你的成就而感到由衷得自豪。
 
 你的弟兄、朋友以及家人。  
 Mike 蒋小霖
